# koris-api

./: .gitignore  README.md  categories.json  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
example_responses/: category.json  genius-box-score.html  genius-player-gamelog.html  genius-players.html  match.json  matches-for-a-team.json  matches.json  team.json
src/koris_api/: __init__.py  api.py  basketfi_api.py  basketfi_parser.py  baskethotel_api.py  baskethotel_parser.py  genius_api.py  genius_parser.py  tui.py
tests/: README.md  __init__.py  conftest.py  generate_fixtures.py  test_api.py  test_golden.py  test_integration.py
tests/fixtures/basketfi/: category.json  match_detail.json  matches.json  team.json
tests/fixtures/genius_sports/: boxscore.json
