[project]
name = "koris-api"
version = "0.1.0"
description = "Python client for the Basket.fi API"
readme = "README.md"
authors = [
    { name = "apmnt", email = "aapomo@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "textual",
    "pandas",
    "openpyxl",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "types-requests>=2.32.4.20250913",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-tqdm>=4.66.0",
    "pytest>=8.0.0",
]

[project.scripts]
koris-api = "koris_api:main"
koris-tui = "koris_api.tui:run"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
strict_equality = true
